--- a/GeneralClashConfig_android.yaml
+++ b/GeneralClashConfig_android.yaml
@@ -1,4 +1,3 @@
-
 port: 7890
 socks-port: 7891
 redir-port: 7892
@@ -145,9 +144,11 @@ tun:
     "org.geekbang.geekTime",
     "tv.danmaku.bili"
   ]
+
 profile:
   store-selected: true
-  store-fake-ip: false
+  store-fake-ip: true
+
 dns:
   enable: true
   use-system-hosts: true
@@ -207,10 +208,14 @@ sniffer:
 NodeParam: &NodeParam {type: http, interval: 86400, health-check: {enable: true, url: 'http://www.google.com/generate_204', interval: 60}}
 
 proxy-providers: 
-  converter:
-    url: '订阅地址'
+  sub0:
+    url: 'sub0'
     <<: *NodeParam
-    path: './ProxyProvider/Providers.yaml'
+    path: './ProxyProvider/sub0.yaml'
+  sub1:
+    url: 'sub1'
+    <<: *NodeParam
+    path: './ProxyProvider/sub1.yaml'
 
 RuleSetDomain: &RuleSetDomain {type: http, behavior: domain, interval: 86400, proxy: DIRECT}
 RuleSetClassical: &RuleSetClassical {type: http, behavior: classical, interval: 86400, proxy: DIRECT}
@@ -461,7 +466,7 @@ proxy-groups:
   - {name: Ⓜ️ 微软云盘, <<: *Select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
   - {name: Ⓜ️ 微软服务, <<: *Select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
   - {name: 💬 自由消息, <<: *Select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
-  - {name: 🐔 落地鸡, <<: *SelectAll, filter: *FilterVPS}
+  - {name: 🐔 落地鸡, <<: *Select, use: [sub0]}
   - {name: 🇺🇲 美国节点, <<: *UrlTest, filter: *FilterUS}
   - {name: 🇨🇳 台湾节点, <<: *UrlTest, filter: *FilterTW}
 
