--- a/GeneralClashConfig.yaml
+++ b/GeneralClashConfig.yaml
@@ -30,7 +30,7 @@ keep-alive-interval: 60
 
 geox-url:
   geoip: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
-  geosite: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
+  geosite: "https://gh-proxy.com/github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
   mmdb: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
   asn: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/GeoLite2-ASN.mmdb"
 
@@ -49,19 +49,20 @@ profile:
   
 dns:
   enable: true
-  use-system-hosts: true
   ipv6: true
-  prefer-h3: true
   respect-rules: true
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip # fake-ip or redir-host
   fake-ip-range: 28.0.0.1/8
   use-hosts: true
-  default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
+  use-system-hosts: true
+  default-nameserver:
+    - quic://223.5.5.5:853
+    - https://1.12.12.12/dns-query
   nameserver-policy:
     "+.lohome.top,+.syncthing.net,+.zerotier.net":
-      - quic://223.5.5.5:853
-      - https://1.12.12.12/dns-query
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "rule-set:direct,mydirect,china,chinax,chinatest": 
       - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
@@ -71,18 +72,22 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
-    "rule-set:github,google,gfw,proxy,tiktok,openai,myopenai,proxyclassical,global":
+    "rule-set:github,mygithub,google,gfw,proxy,tiktok,openai,myopenai,proxyclassical,global":
       - https://8.8.8.8/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://9.9.9.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:github,google,facebook,twitter,tiktok,openai":
       - https://8.8.8.8/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://9.9.9.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - quic://223.5.5.5:853
-      - https://1.12.12.12/dns-query
-  nameserver: 
-      - quic://223.5.5.5:853
-      - https://1.12.12.12/dns-query
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
+  direct-nameserver:
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
+  direct-nameserver-follow-policy: false
+  nameserver:
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
   fake-ip-filter-mode: blacklist
   fake-ip-filter:
     - "WORKGROUP"
@@ -133,17 +138,13 @@ sniffer:
 
 global-ua: clash.meta
 
-NodeParam: &NodeParam {type: http, override: {udp: true, skip-cert-verify: true, up: 60, down: 300}, interval: 86400, health-check: {enable: true, url: 'http://connectivitycheck.platform.hicloud.com/generate_204', interval: 180}}
+NodeParam: &NodeParam {type: http, override: {udp: true, skip-cert-verify: true, up: 40, down: 80}, interval: 86400, health-check: {enable: true, url: 'http://connectivitycheck.platform.hicloud.com/generate_204', interval: 300}}
 
 proxy-providers: 
-  sub0:
-    url: 'sub0'
+  vps:
+    url: ''
     <<: *NodeParam
-    path: './ProxyProvider/sub0.yaml'
-  sub1:
-    url: 'sub1'
-    <<: *NodeParam
-    path: './ProxyProvider/sub1.yaml'
+    path: './ProxyProvider/vps.yaml'
 
 RuleSetDomain: &RuleSetDomain {type: http, behavior: domain, interval: 86400, proxy: DIRECT}
 RuleSetClassical: &RuleSetClassical {type: http, behavior: classical, interval: 86400, proxy: DIRECT}
@@ -157,7 +158,7 @@ rule-providers:
 
   directprocess:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectProcess.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/DirectProcess.list"
     path: ./ruleset/directprocess.yaml
 
   mydirect:
@@ -242,7 +243,7 @@ rule-providers:
 
   amazon:
     <<: *RuleSetClassical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon_No_Resolve.yaml"
     path: ./ruleset/amazon.yaml
 
   onedrive:
@@ -270,6 +271,12 @@ rule-providers:
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok_No_Resolve.yaml"
     path: ./ruleset/tiktok.yaml
 
+  mygithub:
+    <<: *RuleSetClassical
+    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/Github.list"
+    format: text
+    path: ./ruleset/mygithub.yaml
+
   github:
     <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub_No_Resolve.yaml"
@@ -287,7 +294,7 @@ rule-providers:
 
   chinax:
     <<: *RuleSetClassical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical_No_Resolve.yaml"
     path: ./ruleset/chinax.yaml
 
   chinatest:
@@ -348,7 +355,8 @@ rule-providers:
 FilterCrypto: &FilterCrypto '^(?=.*((?i)🇸🇬|坡|狮|SG|Singapore|台|新北|彰化|TW|Taiwan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 FilterUS: &FilterUS '^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 FilterTW: &FilterTW '^(?=.*((?i)台湾|(\b(TW|Taiwan)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
-FilterVPS: &FilterVPS '^(?=.*((?i)0x)).*$'
+FilterHK: &FilterHK '^(?=.*((?i)港|(\b(HK|Hong Kong)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterChat: &FilterChat '^(?=.*((?i)台湾|坡|(\b(Chat|)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 
 UrlTest: &UrlTest 
   type: url-test
@@ -356,7 +364,7 @@ UrlTest: &UrlTest
   disable-udp: false
   hidden: false
   include-all: true
-  tolerance: 50
+  tolerance: 100
   lazy: true
   interval: 300
   timeout: 600
@@ -383,24 +391,29 @@ twPr: &twPr {type: select, disable-udp: false, lazy: true, hidden: false, interv
 directPr: &directPr {type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 600, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
 
 proxy-groups: 
-  - {name: 🚀 节点选择, <<: *Select, proxies: [🔥 手动切换, 🐔 落地鸡, ♻️ 自动选择, DIRECT]}
+  - {name: 🚀 节点选择, <<: *Select, proxies: [🔥 手动切换, 🇨🇳 台湾节点, 🇭🇰 香港节点, 🐔 落地鸡, ♻️ 自动选择, DIRECT]}
   - {name: 🔥 手动切换, <<: *SelectAll}
   - {name: ♻️ 自动选择, <<: *UrlTest}
   - {name: 🅱️ Crypto, <<: *SelectAll, filter: *FilterCrypto}
   - {name: 🎯 全球直连, type: select, proxies: [DIRECT]}
   - {name: 🆎 AdBlock, type: select, proxies: [REJECT, DIRECT]}
-  - {name: 🇬 Google, <<: *pr}
-  - {name: 🤖 Chat服务, <<: *pr}
   - {name: 🍎 苹果服务, <<: *directPr}
+  - {name: 🇬 Google, <<: *pr}
+  - {name: 🤖 Chat服务, <<: *SelectAll, filter: *FilterChat}
   - {name: 📹 油管视频, <<: *pr}
   - {name: 👨‍💻‍ Github, <<: *pr}
+  - {name: 💬 自由消息, <<: *pr}
   - {name: 📺 巴哈姆特, <<: *twPr}
   - {name: Ⓜ️ 微软云盘, <<: *directPr}
   - {name: Ⓜ️ 微软服务, <<: *directPr}
-  - {name: 💬 自由消息, <<: *pr}
-  - {name: 🐔 落地鸡, <<: *Select, use: [sub0]}
+  - {name: 🐔 落地鸡, <<: *Select, use: [vps]}
+  - {name: 🐚 贝贝云, <<: *Select, use: [beibei]}
+  - {name: 🐶 泡泡狗, <<: *Select, use: [paopaodog]}
+  - {name: 🚁 机场cordc, <<: *Select, use: [cordc]}
   - {name: 🇺🇲 美国节点, <<: *UrlTest, filter: *FilterUS}
   - {name: 🇨🇳 台湾节点, <<: *UrlTest, filter: *FilterTW}
+  - {name: 🇭🇰 香港节点, <<: *UrlTest, filter: *FilterHK}
+  - {name: 🐟 漏网之鱼, type: select, disable-udp: false, lazy: true, hidden: false, interval: 300, timeout: 600, proxies: [DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🚀 节点选择]}
 
 rules:
   - RULE-SET,myproxy,🚀 节点选择
@@ -448,6 +461,7 @@ rules:
   - GEOSITE,category-ads-all,🆎 AdBlock
   - RULE-SET,bahamut,📺 巴哈姆特
   - GEOSITE,bahamut,📺 巴哈姆特
+  - RULE-SET,mygithub,👨‍💻‍ Github
   - RULE-SET,github,👨‍💻‍ Github
   - GEOSITE,github,👨‍💻‍ Github
   - RULE-SET,onedrive,Ⓜ️ 微软云盘
@@ -473,4 +487,4 @@ rules:
   - RULE-SET,chinaips,🎯 全球直连,no-resolve
   - GEOIP,LAN,🎯 全球直连,no-resolve
   - GEOIP,CN,🎯 全球直连,no-resolve
-  - MATCH,🎯 全球直连
+  - MATCH,🐟 漏网之鱼
