--- a/GeneralClashConfig.yaml
+++ b/GeneralClashConfig.yaml
@@ -17,7 +17,7 @@ mode: rule
 
 external-controller: 0.0.0.0:9090
 external-ui: metacubexd
-external-ui-url: "https://ghp.ci/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip"
+external-ui-url: "https://gh-proxy.com/github.com/MetaCubeX/metacubexd/archive/gh-pages.zip"
 
 unified-delay: true
 tcp-concurrent: true
@@ -29,10 +29,10 @@ geo-update-interval: 24
 keep-alive-interval: 60
 
 geox-url:
-  geoip: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
+  geoip: "https://gh-proxy.com/github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://gh-proxy.com/github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
-  mmdb: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
-  asn: "https://ghp.ci/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/GeoLite2-ASN.mmdb"
+  mmdb: "https://gh-proxy.com/github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
+  asn: "https://gh-proxy.com/github.com/MetaCubeX/meta-rules-dat/releases/download/latest/GeoLite2-ASN.mmdb"
 
 tun:
   enable: true
@@ -64,20 +64,23 @@ dns:
       - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
       - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "rule-set:direct,mydirect,china,chinax,chinatest": 
-      - quic://223.5.5.5:853
-      - https://1.12.12.12/dns-query
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:tracker,private":
-      - quic://223.5.5.5:853
-      - https://1.12.12.12/dns-query
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
-      - quic://223.5.5.5:853
-      - https://1.12.12.12/dns-query
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "rule-set:github,mygithub,google,gfw,proxy,tiktok,openai,myopenai,proxyclassical,global":
       - https://8.8.8.8/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://9.9.9.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:github,google,facebook,twitter,tiktok,openai":
       - https://8.8.8.8/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://9.9.9.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
+    "rule-set:crypto,cryptocurrency,mycrypto,binance,mybinance": 
+      - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
+      - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
       - https://223.5.5.5/dns-query#ecs=120.76.0.0/14&ecs-override=true=h3=true
       - https://1.12.12.12/dns-query#ecs=120.76.0.0/14&ecs-override=true
@@ -116,26 +119,6 @@ dns:
     - "+.stun.*.*.*.*"
     - "+.stun.*.*.*.*.*"
 
-sniffer:
-  enable: true
-  parse-pure-ip: true
-  force-dns-mapping: true
-  sniff:
-    HTTP:
-      ports: [80, 8080-8880]
-      override-destination: true
-    TLS:
-      ports: [443, 8443]
-    QUIC:
-      ports: [443, 8443]
-  force-domain:
-    - +.v2ex.com
-  skip-domain:
-    - "Mijia Cloud"
-    - "dlg.io.mi.com"
-    - "+.push.apple.com"
-    - "+.apple.com"
-
 global-ua: clash.meta
 
 NodeParam: &NodeParam {type: http, override: {udp: true, skip-cert-verify: true, up: 40, down: 80}, interval: 86400, health-check: {enable: true, url: 'http://connectivitycheck.platform.hicloud.com/generate_204', interval: 300}}
@@ -146,6 +129,7 @@ proxy-providers:
     <<: *NodeParam
     path: './ProxyProvider/vps.yaml'
 
+
 RuleSetDomain: &RuleSetDomain {type: http, behavior: domain, interval: 86400, proxy: DIRECT}
 RuleSetClassical: &RuleSetClassical {type: http, behavior: classical, interval: 86400, proxy: DIRECT}
 RuleSetIpcidr: &RuleSetIpcidr {type: http, behavior: ipcidr, interval: 86400, proxy: DIRECT}
@@ -153,7 +137,7 @@ RuleSetIpcidr: &RuleSetIpcidr {type: http, behavior: ipcidr, interval: 86400, pr
 rule-providers:
   reject:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt"
     path: ./ruleset/reject.yaml
 
   directprocess:
@@ -163,82 +147,87 @@ rule-providers:
 
   mydirect:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectDomain.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/DirectDomain.list"
     path: ./ruleset/mydirect.yaml
 
   myproxy:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list"
     path: ./ruleset/myproxy.yaml
 
   binance:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Binance/Binance_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Binance/Binance_No_Resolve.yaml"
     path: ./ruleset/binance.yaml
 
   mybinance:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/Binance.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/Binance.list"
     path: ./ruleset/mybinance.yaml
+
+  cryptocurrency:
+    <<: *RuleSetClassical
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cryptocurrency/Cryptocurrency.yaml"
+    path: ./ruleset/cryptocurrency.yaml
 
   crypto:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Crypto/Crypto_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Crypto/Crypto_No_Resolve.yaml"
     path: ./ruleset/crypto.yaml
 
   mycrypto:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/Crypto.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/Crypto.list"
     path: ./ruleset/mycrypto.yaml
 
   icloud:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/icloud.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/icloud.txt"
     path: ./ruleset/icloud.yaml
 
   apple:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/apple.txt"
     path: ./ruleset/apple.yaml
 
   appleall:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
     path: ./ruleset/appleall.yaml
 
   netflix:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml"
     path: ./ruleset/netflix.yaml
 
   youtube:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube_No_Resolve.yaml"
     path: ./ruleset/youtube.yaml
 
   googleFCM:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GoogleFCM/GoogleFCM_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GoogleFCM/GoogleFCM_Resolve.list"
     path: ./ruleset/googleFCM.yaml
 
   google:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google_No_Resolve.yaml"
     path: ./ruleset/google.yaml
 
   openai:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI_No_Resolve.yaml"
     path: ./ruleset/openai.yaml
 
   myopenai:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/AI.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/AI.list"
     path: ./ruleset/myopenai.yaml
 
   bahamut:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bahamut/Bahamut_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut_No_Resolve.yaml"
     path: ./ruleset/bahamut.yaml
 
   amazon:
@@ -248,48 +237,48 @@ rule-providers:
 
   onedrive:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive_No_Resolve.yaml"
     path: ./ruleset/onedrive.yaml
 
   microsoft:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft_No_Resolve.yaml"
     path: ./ruleset/microsoft.yaml
 
   discord:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Discord/Discord_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Discord/Discord.list"
     path: ./ruleset/discord.yaml
 
   twitter:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
     path: ./ruleset/twitter.yaml
 
   tiktok:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok_No_Resolve.yaml"
     path: ./ruleset/tiktok.yaml
 
   mygithub:
     <<: *RuleSetClassical
-    url: "https://ghp.ci/https://raw.githubusercontent.com/CuminLo/clash-rules/master/Github.list"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/CuminLo/clash-rules/master/Github.list"
     format: text
     path: ./ruleset/mygithub.yaml
 
   github:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub_No_Resolve.yaml"
     path: ./ruleset/github.yaml
 
   proxy:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt"
     path: ./ruleset/proxy.yaml
 
   china:
     <<: *RuleSetClassical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_No_Resolve.yaml"
     path: ./ruleset/china.yaml
 
   chinax:
@@ -299,64 +288,64 @@ rule-providers:
 
   chinatest:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaTest/ChinaTest_Classical_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaTest/ChinaTest_Classical_No_Resolve.yaml"
     path: ./ruleset/chinatest.yaml
 
   direct:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt"
     path: ./ruleset/direct.yaml
 
   private:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/private.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt"
     path: ./ruleset/private.yaml
 
   gfw:
     <<: *RuleSetDomain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt"
     path: ./ruleset/gfw.yaml
 
   global:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Classical_No_Resolve.yaml"
     path: ./ruleset/global.yaml
 
   proxyclassical:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Proxy/Proxy_Classical_No_Resolve.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy_Classical_No_Resolve.yaml"
     path: ./ruleset/proxyclassical.yaml
 
   telegramcidr:
     <<: *RuleSetIpcidr
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt"
     path: ./ruleset/telegramcidr.yaml
 
   cncidr:
     <<: *RuleSetIpcidr
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt"
     path: ./ruleset/cncidr.yaml
 
   chinaips:
     <<: *RuleSetIpcidr
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml"
     path: ./ruleset/chinaips.yaml
 
   lancidr:
     <<: *RuleSetIpcidr
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt"
     path: ./ruleset/lancidr.yaml
 
   applications:
     <<: *RuleSetClassical
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt"
+    url: "https://gh-proxy.com/raw.githubusercontent.com/Loyalsoldier/clash-rules/release/applications.txt"
     path: ./ruleset/applications.yaml
 
 FilterCrypto: &FilterCrypto '^(?=.*((?i)🇸🇬|坡|狮|SG|Singapore|台|新北|彰化|TW|Taiwan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 FilterUS: &FilterUS '^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
-FilterTW: &FilterTW '^(?=.*((?i)台湾|(\b(TW|Taiwan)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterTW: &FilterTW '^(?=.*((?i)台|(\b(TW|Taiwan)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 FilterHK: &FilterHK '^(?=.*((?i)港|(\b(HK|Hong Kong)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
-FilterChat: &FilterChat '^(?=.*((?i)台湾|坡|(\b(Chat|)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterChat: &FilterChat '^(?=.*((?i)台|tw|taiwan|Chat|GPT))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
 
 UrlTest: &UrlTest 
   type: url-test
@@ -410,6 +399,7 @@ proxy-groups:
   - {name: 🐚 贝贝云, <<: *Select, use: [beibei]}
   - {name: 🐶 泡泡狗, <<: *Select, use: [paopaodog]}
   - {name: 🚁 机场cordc, <<: *Select, use: [cordc]}
+  - {name: ✈️ boostnet1, <<: *Select, use: [boostnet1]}
   - {name: 🇺🇲 美国节点, <<: *UrlTest, filter: *FilterUS}
   - {name: 🇨🇳 台湾节点, <<: *UrlTest, filter: *FilterTW}
   - {name: 🇭🇰 香港节点, <<: *UrlTest, filter: *FilterHK}
@@ -417,10 +407,11 @@ proxy-groups:
 
 rules:
   - RULE-SET,myproxy,🚀 节点选择
-  - RULE-SET,crypto,🅱️ Crypto
-  - RULE-SET,binance,🅱️ Crypto
-  - RULE-SET,mybinance,🅱️ Crypto
   - RULE-SET,mycrypto,🅱️ Crypto
+  - RULE-SET,mybinance,🅱️ Crypto
+  - RULE-SET,binance,🅱️ Crypto
+  - RULE-SET,cryptocurrency,🅱️ Crypto
+  - RULE-SET,crypto,🅱️ Crypto
   - RULE-SET,directprocess,🎯 全球直连
   - RULE-SET,mydirect,🎯 全球直连
   - PROCESS-NAME,android.uid.system,🇬 Google
